Renamed two image files

--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
             <div class="swiper-slide slide">
                 <i class="fas fa-quote-right"></i>
                 <div class="user">
-                    <img src="images/Screenshot (74).png" alt="">
+                    <img src="images/Raj kedar.png" alt="">
                     <div class="user-info">
                         <h3>Raj Kedar  </h3>
                         <div class="stars">
@@ -538,7 +538,7 @@
             <div class="swiper-slide slide">
                 <i class="fas fa-quote-right"></i>
                 <div class="user">
-                    <img src="images/pic-4.png" alt="">
+                    <img src="images/Neeraja.png" alt="">
                     <div class="user-info">
                         <h3>Neeraja </h3>
                         <div class="stars">
